2003-04-24  Mikhael Goikhman  <migo@homemail.com>

	* layout_default.inc:
	use alt="*" not alt="" for item dot images to make w3m happier;
	remove limiting page icons to 9 chars

	* layout_plain.inc:
	don't use item dot images to make links happier
	(but they look very cool in all other browsers, so I am not sure...)

	* screenshots/menus/index.php:
	* screenshots/windowdecors/index.php:
	minor spelling in link names

2003-04-24  Uwe Pross  <uwe.pross@gmx.net>

	* layout_default.inc: 
	Added local style property to pager images to have black forground
	in opera if image loading is turned off.

2003-04-24  Bob Woodside  <dumbledore@woodsway.com>

	* layout_default.inc: 
	Added explicit width & height attributes to the <img> tags for
        the pager icons. Undid the 9 char limit of the alt attribute.

2003-04-24  Mikhael Goikhman  <migo@homemail.com>

	* index.php:
	use alt="FVWM" for text browsers

	* layout_default.inc:
	limit alt of the pager pages to 9 chars, so Opera does not open
	a huge pager until icons are loaded; this looks ok in text browsers;
	fix minor bug (it limitted pager label to 12 chars not 13);
	do not add &nbsp; in labels to save the space;
	fool the Konqueror into thinking there is no alternate css;
	reformat html and move stylesheet into separate default.css

	* documentation/index.php:
	use the full link name

	* alternate.css:
	* default.css:
	reformat

2003-04-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* logo-competition/rules.php:
	updated logo competition schedule

2003-04-23  Uwe Pross  <uwe.pross@gmx.net>

	* layout_default.inc:
	changed colors a bit. added new css class for non hover links.

2003-04-23  Mikhael Goikhman  <migo@homemail.com>

	* index.php:
	* fvwm-logo.gif:
	added an FvwmBanner like logo

	* layout_default.inc:
	* layout_plain.inc:
	* pictures/item_dot.gif:
	center the jump list and use an item icon in it;
	experimental violet-like link colors

2003-04-22  Uwe Pross  <uwe.pross@mx.net>

	* download/index.php: